<resources>
    <string name="app_name">Vision Next</string>
    <string name="label_ping">Ping Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_download">http Test</string>
    <string name="label_vision_next">Vison next</string>
    <string name="welcome_desc">This application will be used for testing 5G network. !!</string>
    <string name="selected_item">Selected item:</string>
    <string name="start_download">start download</string>
    <string name="stop_download">stop download</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="bidirectional">bi - directional</string>
    <string name="uploadUrl">http://speedtest.tele2.net/upload.php</string>
    <string name="label_logout">Logout</string>
    <string name="label_livestreaming">Live Streaming</string>
    <string name="label_http_steaming">Http Steaming</string>
    <string name="label_websocket">Web Socket</string>
    <string name="label_settings">Settings</string>
    <string name="send_msg">Say Hello</string>

    <string-array name="filesize">
        <item>10MB</item>
        <item>100MB</item>
        <item>1GB</item>
    </string-array>
</resources>
