<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pingFragment"
            android:title="@string/label_ping" />

        <item
            android:id="@+id/downloadFragment"
            android:title="@string/label_download" />

        <item
            android:id="@+id/websocket"
            android:title="@string/label_websocket" />

        <item
            android:id="@+id/httpLiveStream"
            android:title="@string/label_http_steaming" />

        <item
            android:id="@+id/liveStreamingFragment"
            android:title="@string/label_livestreaming"/>

<!--        <item-->
<!--            android:id="@+id/navLogout"-->
<!--            android:title="@string/label_logout" />-->
    </group>
</menu>